// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds vote views fetches post votes 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "uri": "record(0)",
  "votes": Array [
    Object {
      "actor": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "handle": "eve.test",
        "viewer": Object {},
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "down",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "actor": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(1)",
        "handle": "dan.test",
        "viewer": Object {
          "following": "record(1)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "actor": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(2)",
        "handle": "carol.test",
        "viewer": Object {
          "followedBy": "record(3)",
          "following": "record(2)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "down",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "actor": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(0)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "viewer": Object {
          "followedBy": "record(5)",
          "following": "record(4)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`pds vote views fetches reply votes 1`] = `
Object {
  "cursor": "0000000000000::bafycid",
  "uri": "record(0)",
  "votes": Array [
    Object {
      "actor": Object {
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "handle": "carol.test",
        "viewer": Object {
          "followedBy": "record(2)",
          "following": "record(1)",
        },
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
}
`;
